FIXED: fade hidden behind content in slider ;

--- a/static/styles/mdp.scss
+++ b/static/styles/mdp.scss
@@ -246,6 +246,10 @@ header .navbar.navbar-default{
     padding:2% 8%;
   }
 
+  &__content {
+    * { z-index:1000; }
+  }
+
   .fade {
     position: absolute;
     opacity:1;
@@ -254,7 +258,7 @@ header .navbar.navbar-default{
     left: 0;
     bottom:0;
     right:0;
-    z-index: 1000;
+    z-index: 1001;
     width: 100%;
     height: 100%;
 
@@ -262,9 +266,9 @@ header .navbar.navbar-default{
     background-size: cover;
   }
 
-  &__events-detail{
+  &__event-detail{
     position: relative;
-    z-index:1001;
+    z-index:1002!important;
   }
 
   .read-more {
